[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/Sky.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Taunt.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Game.gd" type="Script" id=4]
[ext_resource path="res://assets/Ship.tscn" type="PackedScene" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Sky" parent="." instance=ExtResource( 1 )]

[node name="Taunt" parent="." instance=ExtResource( 3 )]
use_top_left = true

[node name="Ship" parent="." instance=ExtResource( 5 )]

[node name="Ennemies" type="Node2D" parent="."]

[node name="PopEnnemy" type="Timer" parent="."]
autostart = true

[node name="WavePopper" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="timeout" from="PopEnnemy" to="." method="_on_PopEnnemy_timeout"]
[connection signal="timeout" from="WavePopper" to="." method="_on_WavePopper_timeout"]
